Try to make the tests pass as before